--- a/src/componnents/Header.css
+++ b/src/componnents/Header.css
@@ -17,3 +17,30 @@
 .header__right {
     margin-right: 20px;
 }
+
+.header__right > input {
+    border-radius: 10px;
+    font-size: 18px;
+    border: 2px solid;
+}
+
+.header__right > input::placeholder {
+    font-size: 15px;
+}
+
+.button {
+    cursor: pointer;
+    height: 45px;
+    width: 140px;
+    font-size: 20px;
+    text-decoration: none;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(255, 255, 255);
+}
+
+.button:hover {
+    transition: all 0.5s;
+    background-color: rgb(163, 163, 163);
+}
